--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
         padding: 10px;
       }
     }
+
+    /* Position the footer at the bottom of the page */
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -113,7 +125,7 @@
   </nav>
   <main>
     <section id="home" class="section visible">
-      <!-- Image as background text -->
+      <!-- Image as background -->
       <div class="carousel">
         <img src="https://res.cloudinary.com/dertpfbtv/image/upload/v1690039963/car_Two_trzmep.jpg" alt="Car 1">
         <div class="carousel-content">
